--- a/css/textCarousel.css
+++ b/css/textCarousel.css
@@ -1,4 +1,3 @@
-/* Container giới hạn không gian cho chữ chạy */
 .marquee-container {
   width: 100%; /* hoặc chỉnh độ rộng mong muốn */
   overflow: hidden;
@@ -12,8 +11,8 @@
 /* Thiết lập chữ và hiệu ứng */
 .marquee-text {
   display: inline-block;
-  padding-left: 100%; /* Bắt đầu từ ngoài khung bên phải */
-  animation: marquee 10s linear infinite;
+  padding-left: 100%;
+  animation: marquee 20s linear infinite;
   color: #cccccc;
   font-family: Lora;
   font-size: 80px;
@@ -31,6 +30,30 @@
   }
 }
 
+@media (min-width: 1441px) and (max-width: 1919px) {
+  .marquee-container {
+    margin: 75px 0;
+  }
+  .marquee-text {
+    font-size: 75px;
+  }
+}
+@media (min-width: 769px) and (max-width: 1440px) {
+  .marquee-container {
+    margin: 70px 0;
+  }
+  .marquee-text {
+    font-size: 70px;
+  }
+}
+@media (min-width: 392px) and (max-width: 768px) {
+  .marquee-container {
+    margin: 65px 0;
+  }
+  .marquee-text {
+    font-size: 65px;
+  }
+}
 @media (max-width: 391px) {
   .marquee-container {
     margin: 60px 0;
