--- a/css/banner.css
+++ b/css/banner.css
@@ -18,33 +18,39 @@
 }
 
 .banner .banner__content h1 {
+  font-family: Lora;
   font-size: 72px;
-  color: #ffffff;
-  line-height: 90px;
   font-weight: 400;
+  line-height: 90px;
+  text-align: center;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
   width: 350px;
   align-items: center;
-  margin-top: 28px;
+  margin-top: 20px;
 }
 
 .banner .banner__content h4 {
-  font-family: "Poppins";
   color: #ffffff;
   font-size: 18px;
   font-weight: 400;
   line-height: 30px;
-  margin: 30px;
+  margin: 24px;
+  margin-left: 45px;
+  font-family: Poppins;
 }
 
 .banner .banner__content p {
   display: inline;
   border-bottom: 2px solid rgb(255, 255, 255);
-  font-family: "Poppins";
   font-size: 16px;
   line-height: 24px;
-  font-weight: 400;
   color: #ffffff;
   margin: 10px;
+  font-family: Poppins;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: center;
 }
 @media (min-width: 1441px) and (max-width: 1919px) {
   .banner {
