--- a/css/productSlider.css
+++ b/css/productSlider.css
@@ -1,7 +1,8 @@
 .slider__title {
   display: flex;
   justify-content: center;
-  margin: 50px;
+  margin-top: 28px;
+  margin-bottom: 46px;
 }
 
 .slider__title h1 {
@@ -15,7 +16,7 @@
 .slider__list {
   display: flex;
   justify-content: center;
-  width: 1420px;
+  margin: 0 250px;
 }
 
 .slider {
@@ -38,7 +39,11 @@
     text-align: center;
   }
   .slider__list {
-    width: 1100px;
+    margin: 0;
+  }
+  .image__slide {
+    width: 100%;
+    height: 400px;
   }
 }
 @media (min-width: 392px) and (max-width: 768px) {
@@ -51,6 +56,7 @@
   .slider__list {
     width: 100%;
     overflow: scroll;
+    margin: 0 50px;
   }
 }
 
@@ -62,11 +68,12 @@
     text-align: center;
   }
   .image__slide {
-    width: 345px;
-    height: 460px;
+    width: 100%;
+    height: 81%;
   }
   .slider__list {
     width: 100%;
     overflow: scroll;
+    margin: 0;
   }
 }
