--- a/css/saleBlcok.css
+++ b/css/saleBlcok.css
@@ -8,7 +8,6 @@
 .wrapper__image,
 .wrapper__title {
   width: 420px;
-  height: 560px;
 }
 
 .wrapper__image img {
@@ -29,22 +28,29 @@
   align-items: center;
 }
 
+.title__header p {
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: center;
+}
+
 .title__body {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 120px;
 }
 
 .title__body h1 {
   width: 240px;
-  height: 160px;
   font-family: Lora;
   font-size: 56px;
   font-weight: 400;
   line-height: 80px;
   text-align: center;
-  margin: 20px;
 }
 
 .title__body p {
@@ -53,6 +59,7 @@
   font-weight: 400;
   line-height: 24px;
   text-align: center;
+  margin-top: 12px;
   width: 240px;
 }
 @media (min-width: 1441px) and (max-width: 1919px) {
