--- a/css/footer.css
+++ b/css/footer.css
@@ -12,7 +12,7 @@ footer {
   font-weight: 400;
   line-height: 42px;
   text-align: center;
-  margin: 40px 0;
+  margin: 55px 0 -11px;
 }
 
 .footer p {
@@ -35,8 +35,10 @@ footer .icon i {
   position: relative;
 }
 .footer__input input {
-  padding: 14px 17px;
+  padding: 17px;
   width: 465px;
+  margin-top: 2px;
+  margin-bottom: 14px;
 }
 
 .footer__input i {
