--- a/css/inspiration.css
+++ b/css/inspiration.css
@@ -8,7 +8,7 @@
 .inspiration__title {
   display: flex;
   justify-content: center;
-  margin: 80px;
+  margin: 70px;
 }
 
 .inspiration__title h2 {
@@ -30,12 +30,13 @@
 .inspiration__body {
   display: flex;
   justify-content: center;
-  gap: 60px;
+  gap: 84px;
   align-items: center;
 }
 
 .inspiration__image {
   width: 291px;
+  margin: -10px 0px;
 }
 
 .inspiration__item {
@@ -47,7 +48,7 @@
   font-weight: 400;
   line-height: 38px;
   text-align: left;
-  margin: 10px 0;
+  margin: 18px 0 10px;
 }
 
 .inspiration__item p {
