--- a/css/productSlider.css
+++ b/css/productSlider.css
@@ -67,13 +67,18 @@
     line-height: 38.4px;
     text-align: center;
   }
-  .image__slide {
-    width: 100%;
-    height: 81%;
-  }
+
   .slider__list {
     width: 100%;
     overflow: scroll;
     margin: 0;
+  }
+  .slider__title {
+    margin-top: 20px;
+    margin-bottom: 34px;
+  }
+  .splide__slide img {
+    vertical-align: bottom;
+    height: 358px;
   }
 }
