--- a/css/textCarousel.css
+++ b/css/textCarousel.css
@@ -56,7 +56,7 @@
 }
 @media (max-width: 391px) {
   .marquee-container {
-    margin: 60px 0;
+    margin: 24px 0 10px;
   }
   .marquee-text {
     font-size: 60px;
